--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -2,10 +2,28 @@
     <p>На данный момент товаров нет</p>
 <% end %>
 <% @products.each do |product| %>
-    <div>
-      <p><%= product.name %></p>
-      <p><%= product.description %></p>
-      <%= image_tag product.photo %>
+    <div class="col-sm-4 col-lg-4 col-md-4">
+      <div class="thumbnail">
+        <%= image_tag product.photo %>
+
+        <div class="caption">
+          <h4 class="pull-right">$64.99</h4>
+          <h4><%= link_to product.name, product_path(product) %>
+          </h4>
+          <p><%= product.description %></p>
+        </div>
+        <!--<div class="ratings">-->
+          <!--<p class="pull-right">12 reviews</p>-->
+
+          <!--<p>-->
+            <!--<span class="glyphicon glyphicon-star"></span>-->
+            <!--<span class="glyphicon glyphicon-star"></span>-->
+            <!--<span class="glyphicon glyphicon-star"></span>-->
+            <!--<span class="glyphicon glyphicon-star"></span>-->
+            <!--<span class="glyphicon glyphicon-star-empty"></span>-->
+          <!--</p>-->
+        <!--</div>-->
+      </div>
     </div>
 <% end %>
 
