--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -4,24 +4,25 @@
 <% @products.each do |product| %>
     <div class="col-sm-4 col-lg-4 col-md-4">
       <div class="thumbnail">
-        <%= image_tag product.photo %>
+        <%= image_tag product.photo, class: 'product-img' %>
 
         <div class="caption">
-          <h4 class="pull-right">$64.99</h4>
+          <!--<h4 class="pull-right">$64.99</h4>-->
           <h4><%= link_to product.name, product_path(product) %>
           </h4>
+
           <p><%= product.description %></p>
         </div>
         <!--<div class="ratings">-->
-          <!--<p class="pull-right">12 reviews</p>-->
+        <!--<p class="pull-right">12 reviews</p>-->
 
-          <!--<p>-->
-            <!--<span class="glyphicon glyphicon-star"></span>-->
-            <!--<span class="glyphicon glyphicon-star"></span>-->
-            <!--<span class="glyphicon glyphicon-star"></span>-->
-            <!--<span class="glyphicon glyphicon-star"></span>-->
-            <!--<span class="glyphicon glyphicon-star-empty"></span>-->
-          <!--</p>-->
+        <!--<p>-->
+        <!--<span class="glyphicon glyphicon-star"></span>-->
+        <!--<span class="glyphicon glyphicon-star"></span>-->
+        <!--<span class="glyphicon glyphicon-star"></span>-->
+        <!--<span class="glyphicon glyphicon-star"></span>-->
+        <!--<span class="glyphicon glyphicon-star-empty"></span>-->
+        <!--</p>-->
         <!--</div>-->
       </div>
     </div>
