--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -7,8 +7,11 @@
         <%= image_tag product.photo, class: 'product-img' %>
 
         <div class="caption">
-          <!--<h4 class="pull-right">$64.99</h4>-->
-          <h4><%= link_to product.name, product_path(product) %>
+          <p class="pull-right">
+            <%= link_to(image_tag('edit-icon.png', class: 'edit-btn') , edit_product_path(product)) %>
+          </p>
+          <h4>
+            <%= link_to product.name, product_path(product) %>
           </h4>
 
           <p><%= product.description %></p>
