--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,6 +1,4 @@
-<h2>Добавление товара</h2>
-
-<%= form_for(@product, url: {action: "create"}) do |f| %>
+<%= form_for(@product) do |f| %>
 
     <div class="field">
       <%= f.label :name %><br/>
