product view page

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -2,8 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .product-img {
-  height: 150px !important;
-  width: 320px !important;
+  max-height: 150px !important;
+  max-width: 320px !important;
+}
+
+.full-product-img {
+  max-height: 300px !important;
+  max-width: 800px !important;
 }
 
 .edit-btn {
