--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,10 +65,8 @@
       <p class="lead">Меню</p>
 
       <div class="list-group">
-        <%= link_to "Добавить товар", new_product_path, class: "list-group-item" %>
-        <a href="#" class="list-group-item">Category 1</a>
-        <a href="#" class="list-group-item">Category 2</a>
-        <a href="#" class="list-group-item">Category 3</a>
+        <%= link_to 'Главная страница', :root, class: 'list-group-item' %>
+        <%= link_to 'Добавить товар', new_product_path, class: 'list-group-item' %>
       </div>
     </div>
 
