--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,80 @@
-<h1>Product#show</h1>
-<p>Find me in app/views/product/show.html.erb</p>
+<div class="thumbnail">
+  <%= image_tag @product.photo, class: 'img-responsive full-product-img' %>
+  <div class="caption-full">
+    <% if current_user == @product.user %>
+        <p class="pull-right">
+          <%= link_to(image_tag('edit-icon.png', class: 'edit-btn'), edit_product_path(@product)) %>
+        </p>
+    <% end %>
+    <h4>
+      <%= @product.name %>
+    </h4>
+    <p>
+      <%= @product.description %>
+    </p>
+  </div>
+  <!--<div class="ratings">-->
+    <!--<p class="pull-right">3 reviews</p>-->
+    <!--<p>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star-empty"></span>-->
+      <!--4.0 stars-->
+    <!--</p>-->
+  <!--</div>-->
+</div>
+
+<!--<div class="well">-->
+
+  <!--<div class="text-right">-->
+    <!--<a class="btn btn-success">Leave a Review</a>-->
+  <!--</div>-->
+
+  <!--<hr>-->
+
+  <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star-empty"></span>-->
+      <!--Anonymous-->
+      <!--<span class="pull-right">10 days ago</span>-->
+      <!--<p>This product was great in terms of quality. I would definitely buy another!</p>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <!--<hr>-->
+
+  <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star-empty"></span>-->
+      <!--Anonymous-->
+      <!--<span class="pull-right">12 days ago</span>-->
+      <!--<p>I've alredy ordered another one!</p>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <!--<hr>-->
+
+  <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star"></span>-->
+      <!--<span class="glyphicon glyphicon-star-empty"></span>-->
+      <!--Anonymous-->
+      <!--<span class="pull-right">15 days ago</span>-->
+      <!--<p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>-->
+    <!--</div>-->
+  <!--</div>-->
+
+<!--</div>-->
