--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,4 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Удалить товар', product_path(@product), method: :delete %>
+<%= link_to 'Удалить товар',
+            product_path(@product),
+            data: {confirm: 'Вы действительно хотите удалить товар?'},
+            method: :delete %>
