--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-
-<p class="alert"><%= alert %></p>
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -74,40 +71,45 @@
 
       <!--<div class="row carousel-holder">-->
 
-        <!--<div class="col-md-12">-->
-          <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
-            <!--<ol class="carousel-indicators">-->
-              <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
-              <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
-              <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
-            <!--</ol>-->
-            <!--<div class="carousel-inner">-->
-              <!--<div class="item active">-->
-                <!--<img class="slide-image" src="http://placehold.it/800x300" alt="">-->
-              <!--</div>-->
-              <!--<div class="item">-->
-                <!--<img class="slide-image" src="http://placehold.it/800x300" alt="">-->
-              <!--</div>-->
-              <!--<div class="item">-->
-                <!--<img class="slide-image" src="http://placehold.it/800x300" alt="">-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">-->
-              <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-            <!--</a>-->
-            <!--<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">-->
-              <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
-            <!--</a>-->
-          <!--</div>-->
-        <!--</div>-->
+      <!--<div class="col-md-12">-->
+      <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
+      <!--<ol class="carousel-indicators">-->
+      <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+      <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+      <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+      <!--</ol>-->
+      <!--<div class="carousel-inner">-->
+      <!--<div class="item active">-->
+      <!--<img class="slide-image" src="http://placehold.it/800x300" alt="">-->
+      <!--</div>-->
+      <!--<div class="item">-->
+      <!--<img class="slide-image" src="http://placehold.it/800x300" alt="">-->
+      <!--</div>-->
+      <!--<div class="item">-->
+      <!--<img class="slide-image" src="http://placehold.it/800x300" alt="">-->
+      <!--</div>-->
+      <!--</div>-->
+      <!--<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">-->
+      <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
+      <!--</a>-->
+      <!--<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">-->
+      <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
+      <!--</a>-->
+      <!--</div>-->
+      <!--</div>-->
 
       <!--</div>-->
 
       <div class="row">
 
+        <% unless notice.nil? %>
+            <p class="alert alert-info"><%= notice %></p>
+        <% end %>
+        <% unless alert.nil? %>
+            <p class="alert alert-danger"><%= alert %></p>
+        <% end %>
+
         <%= yield %>
-
-
 
 
       </div>
