--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,21 +1,21 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, role: 'form') do |f| %>
 
-    <div class="field">
+    <div class="field form-group">
       <%= f.label :name %><br/>
-      <%= f.text_field :name, autofocus: true %>
+      <%= f.text_field :name, autofocus: true, class: 'form-control' %>
     </div>
 
-    <div class="field">
+    <div class="field form-group">
       <%= f.label :description %><br/>
-      <%= f.text_area :description %>
+      <%= f.text_area :description, class: 'form-control' %>
     </div>
 
-    <div class="field">
+    <div class="field form-group">
       <%= f.label :photo %><br/>
       <%= f.file_field :photo %>
     </div>
 
-    <div class="actions">
-      <%= f.submit "Сохранить" %>
+    <div class="actions form-group">
+      <%= f.submit 'Сохранить', class: 'btn btn-default' %>
     </div>
 <% end %>
