--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>Регистрация</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
@@ -9,26 +9,26 @@
     </div>
 
     <div class="field form-group">
-      <%= f.label :username %><br/>
+      <%= f.label :username, 'Имя пользователя' %><br/>
       <%= f.text_field :username, autofocus: true, class: 'form-control' %>
     </div>
 
     <div class="field form-group">
-      <%= f.label :password %>
+      <%= f.label :password, 'Пароль' %>
       <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br/>
-      <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+      <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
     </div>
 
     <div class="field form-group">
-      <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+      <%= f.label :password_confirmation, 'Повторите пароль' %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
     </div>
 
     <div class="actions form-group">
-      <%= f.submit "Sign up", class: 'btn btn-default' %>
+      <%= f.submit 'Зарегистрироваться', class: 'btn btn-default' %>
     </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+<%= render 'users/shared/links' %>
