--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
+<h2>Регистрация</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :firstname, 'Имя' %><br/>
+      <%= f.text_field :firstname, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :lastname, 'Фамилия' %><br/>
+      <%= f.text_field :lastname, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :birthday, 'Дата рождения' %><br/>
+      <%= f.date_select :birthday, class: 'form-control' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+
+
+    <div class="field form-group">
+      <%= f.label :email %><br/>
+      <%= f.email_field :email, class: 'form-control' %>
+    </div>
+
+    <div class="field form-group">
+      <%= f.label :password, 'Пароль' %>
+      <em>(Минимум 10 символов)</em>
+      <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
+    </div>
+
+    <div class="field form-group">
+      <%= f.label :password_confirmation, 'Повторите пароль' %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+    </div>
+
+    <div class="actions form-group">
+      <%= f.submit 'Зарегистрироваться', class: 'btn btn-default' %>
+    </div>
 <% end %>
 
-<%= render "admins/shared/links" %>
+<%= render 'admins/shared/links' %>
