--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,17 +1,17 @@
 <%= form_for(@product, role: 'form') do |f| %>
 
     <div class="field form-group">
-      <%= f.label :name %><br/>
+      <%= f.label :name, 'Название товара' %><br/>
       <%= f.text_field :name, autofocus: true, class: 'form-control' %>
     </div>
 
     <div class="field form-group">
-      <%= f.label :description %><br/>
+      <%= f.label :description, 'Описание' %><br/>
       <%= f.text_area :description, class: 'form-control' %>
     </div>
 
     <div class="field form-group">
-      <%= f.label :photo %><br/>
+      <%= f.label :photo, 'Фото' %><br/>
       <%= f.file_field :photo %>
     </div>
 
