--- a/app/views/shops/registrations/new.html.erb
+++ b/app/views/shops/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
+<h2>Регистрация</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :shopname, 'Название магазина' %><br/>
+      <%= f.text_field :shopname, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :avatar, 'Аватар' %><br/>
+      <%= f.file_field :avatar %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :email %><br/>
+      <%= f.email_field :email, class: 'form-control' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="field form-group">
+      <%= f.label :password, 'Пароль' %>
+      <em>(Минимум 8 символов)</em>
+      <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
+    </div>
+
+    <div class="field form-group">
+      <%= f.label :password_confirmation, 'Повторите пароль' %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+    </div>
+
+    <div class="actions form-group">
+      <%= f.submit 'Зарегистрироваться', class: 'btn btn-default' %>
+    </div>
 <% end %>
 
-<%= render "shops/shared/links" %>
+<%= render 'shops/shared/links' %>
