--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,11 +7,7 @@
         <%= image_tag product.photo, class: 'product-img' %>
 
         <div class="caption">
-          <% if current_user == product.user %>
-              <p class="pull-right">
-                <%= link_to(image_tag('edit-icon.png', class: 'edit-btn'), edit_product_path(product)) %>
-              </p>
-          <% end %>
+          <%= render 'controls', product: product %>
           <h4>
             <%= link_to product.name, product_path(product) %>
           </h4>
