--- a/app/views/products/_controls.html.erb
+++ b/app/views/products/_controls.html.erb
@@ -3,11 +3,14 @@
       <%= link_to(image_tag('edit-icon.png', class: 'edit-btn'), edit_product_path(product)) %>
     </p>
 <% end %>
-<% if current_user.is_a? Admin %>
-    <p class="pull-right">
-      <%= link_to(image_tag(product.pro ? 'pro_active.png' : 'pro_disabled.png',
-                            class: 'pro-btn'),
+<p class="pull-right">
+  <% img = image_tag(product.pro ? 'pro_active.png' : 'pro_disabled.png',
+                     class: 'pro-btn') %>
+  <% if current_user.is_a? Admin %>
+      <%= link_to(img,
                   toggle_pro_products_path(product),
                   method: :post) %>
-    </p>
-<% end %>
+  <% elsif current_user %>
+      <%= img %>
+  <% end %>
+</p>
