guests not see pro products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,26 +2,28 @@
     <p>На данный момент товаров нет</p>
 <% end %>
 <% @products.each do |product| %>
-    <div class="col-sm-4 col-lg-4 col-md-4">
-      <div class="thumbnail">
-        <%= image_tag product.photo, class: 'product-img' %>
+    <% if current_user || !product.pro %>
+        <div class="col-sm-4 col-lg-4 col-md-4">
+          <div class="thumbnail">
+            <%= image_tag product.photo, class: 'product-img' %>
 
-        <div class="caption">
-          <%= render 'controls', product: product %>
-          <h4>
-            <%
-               if current_user
-                 shopname = " (#{product.user.shopname})"
-               else
-                 shopname = ''
-               end
-            %>
-            <%= link_to product.name + shopname, product_path(product) %>
-          </h4>
+            <div class="caption">
+              <%= render 'controls', product: product %>
+              <h4>
+                <%
+                   if current_user
+                     shopname = " (#{product.user.shopname})"
+                   else
+                     shopname = ''
+                   end
+                %>
+                <%= link_to product.name + shopname, product_path(product) %>
+              </h4>
 
-          <p><%= product.description %></p>
+              <p><%= product.description %></p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
+    <% end %>
 <% end %>
 
