add ability to buy

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,6 +22,7 @@
 
               <p><%= product.description %></p>
             </div>
+            <%= render 'buybtn', product: product %>
           </div>
         </div>
     <% end %>
