--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,10 @@
     <h4>
       <%= @product.name %>
     </h4>
+
     <p>
       <%= @product.description %>
     </p>
+    <%= render 'buybtn', product: @product %>
   </div>
 </div>
